# mailops

./: .gitignore  README.md  pyproject.toml
config/: sources.yaml
mailops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mailops/: cli.py  config.py  gmail_client.py  infer.py  jobs.py  manager.py  models.py  printing.py  review_app.py  rules.py  search.py  web_server.py
src/mailops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mailops/actions/: clickup_action.py  print_action.py
src/mailops/gmail/: fetch_wsj_link.py
src/mailops/pdf/: exclude.py  page_signals.py  split_halves.py  suggest.py  text_density.py  thumbnails.py
src/mailops/wsj/: bootstrap_login.py  download.py  downloader.py  job_create.py
tests/: test_clickup_action.py  test_config.py  test_enhanced_rules.py  test_exclude_pages.py  test_fetch_wsj_link.py  test_gmail_client.py  test_infer.py  test_manager.py  test_print_action.py  test_printing.py  test_rules.py  test_search.py  test_split_halves.py  test_split_halves_impose_letter.py  test_text_density.py  test_wsj_job_create.py
