[project]
name = "mailops"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "reportlab>=4.0.0",
  "pypdf",
  "pymupdf",      # thumbnails
  "streamlit",    # review UI
  "qrcode",       # optional: QR code for iPhone
  "pillow",       # required by qrcode for image output
  "playwright",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "google-auth-httplib2",
]

[project.scripts]
mailops = "mailops.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "streamlit"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
